--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,15 @@
   
   body{
       text-align:center;
-      font-family: "iA Writer Duospace", Helvetica, sans-serif;
+      font-family: 'iA Writer Duospace', monospace;
+      font-size: 16px;
+      line-height: 1.5;
   }
 
   i {
     display: inline-block;
     font-style: normal;
-    animation: spin 1s infinite linear;
+    animation: spin 0.25s infinite linear;
 }
 
 
