--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ h1 span{
 
 h1 span#countdown{
     font-weight: normal;
+    font-style: normal;
 }
 
 h2{
@@ -131,7 +132,13 @@ h3{
     margin-bottom: 16px;
 
 }
+#grid p a{
+    border-bottom: 1px solid;
+}
 
+#grid p a:hover{
+    border-bottom: none;
+}
 .btn{
     width: 100%;
     background-color:#1D72B0;
@@ -167,7 +174,7 @@ span.hint{
     margin-top: 80px;
     display: grid;
     text-align: left;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 1fr 1fr;
 
 
 }
@@ -179,9 +186,10 @@ span.hint{
 }
 
 .sidebar{
-    padding-left: 100px;
     display: grid;
-    grid-template-columns: 33.3% 33.3% 33.3%;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    padding-left: 100px;
 }
 
 .collage{
@@ -206,18 +214,6 @@ blockquote img{
     opacity: 0.7;
 }
 
-
-.bq-one{
-    margin-right: 10px;
-}
-
-.bq-two{
-    margin-left: 10px;
-}
-.bq-three{
-    margin-left: 20px;
-}
-
 a{
     text-decoration: none;
     color: #171717;
@@ -228,7 +224,7 @@ a:hover{
     border-bottom: 1px solid #252525;
 }
 
-@media screen and (max-width:600px){
+@media screen and (max-width:700px){
 
     .header h1{
         float: none;
@@ -259,5 +255,21 @@ a:hover{
 
     .collage{
         margin: 0px 0px 40px 0px;
+    }
+
+    ul li:last-child{
+        display: none;
+    }
+
+    span.dot{
+        display:none;
+    }
+
+    #register{
+        margin-right: 0;
+    }
+
+    blockquote{
+        font-size: 10px;
     }
 }
